# agent-namespace-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  demo.py  main.py  pyproject.toml
agent/: graph.py
agent/tools/: base.py  git.py  skills.py  tasks.py  wiki.py
docs/: architecture.md  namespace-pattern.md
docs/scenarios/: 01-list-tasks.md  02-task-details.md  03-help-discovery.md  04-create-pr.md  05-save-skill.md  06-reuse-skill.md  07-multi-step-workflow.md
src/agent_namespace_demo/: config.py  graph.py  repl.py  static_demo.py
src/agent_namespace_demo/tools/: base.py  git.py  skills.py  tasks.py  wiki.py
tests/: test_git.py  test_skills.py  test_tasks.py  test_wiki.py
