[project]
name = "agent-namespace-demo"
version = "0.1.0"
description = "Demo of Tool Namespace Pattern for LangGraph agents"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
